--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-plugin-sharp": "^2.6.38",
     "gatsby-remark-copy-linked-files": "^2.3.19",
     "gatsby-remark-images": "^3.3.33",
+    "gatsby-remark-line-breaks": "^1.0.0",
     "gatsby-remark-prismjs": "^3.5.16",
     "gatsby-remark-responsive-iframe": "^2.4.17",
     "gatsby-remark-smartypants": "^2.3.13",
@@ -25,13 +26,14 @@
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "postcss": "^8.1.1",
-    "prismjs": "^1.22.0",
+    "prismjs": "^1.23.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
+    "gh-pages": "^3.1.0",
     "prettier": "2.1.2",
     "tailwindcss": "^1.8.13"
   },
